<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <groupId>io.kafbat.ui</groupId>
    <artifactId>kafbat-ui</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>kafbat-ui</name>
    <description>Web UI for Apache Kafka</description>

    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>contract</module>
        <module>api</module>
        <module>serde-api</module>
        <module>e2e-tests</module>
    </modules>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <frontend-generated-sources-directory>..//frontend/src/generated-sources
        </frontend-generated-sources-directory>

        <sonar.organization>kafbat</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.exclusions>**/e2e-tests/**/*</sonar.exclusions>
        <git.revision>latest</git.revision>

        <!-- Dependency versions -->
        <antlr4-maven-plugin.version>4.12.0</antlr4-maven-plugin.version>
        <apache.commons.version>2.12.0</apache.commons.version>
        <assertj.version>3.25.3</assertj.version>
        <avro.version>1.11.4</avro.version>
        <byte-buddy.version>1.15.5</byte-buddy.version>
        <confluent.version>7.4.4</confluent.version>
        <datasketches-java.version>3.1.0</datasketches-java.version>
        <groovy.version>3.0.13</groovy.version>
        <jackson.version>2.14.0</jackson.version>
        <kafka-clients.version>3.5.2</kafka-clients.version>
        <org.mapstruct.version>1.6.2</org.mapstruct.version>
        <org.projectlombok.version>1.18.34</org.projectlombok.version>
        <protobuf-java.version>3.25.5</protobuf-java.version>
        <scala-lang.library.version>2.13.9</scala-lang.library.version>
        <snakeyaml.version>2.3</snakeyaml.version>
        <spring-boot.version>3.3.4</spring-boot.version>
        <serde-api.version>1.0.0</serde-api.version>
        <odd-oddrn-generator.version>0.1.17</odd-oddrn-generator.version>
        <odd-oddrn-client.version>0.1.39</odd-oddrn-client.version>
        <org.json.version>20240303</org.json.version>
        <dev.cel.version>0.3.0</dev.cel.version>
        <guava.version>33.3.1-jre</guava.version>
        <!-- Test dependency versions -->
        <junit.version>5.11.2</junit.version>
        <mockito.version>5.11.0</mockito.version>
        <okhttp3.mockwebserver.version>4.12.0</okhttp3.mockwebserver.version>
        <testcontainers.version>1.20.2</testcontainers.version>

        <!-- Frontend dependency versions -->
        <node.version>v18.17.1</node.version>
        <pnpm.version>v9.11.0</pnpm.version>

        <!-- Plugin versions -->
        <fabric8-maven-plugin.version>0.42.1</fabric8-maven-plugin.version>
        <frontend-maven-plugin.version>1.12.1</frontend-maven-plugin.version>
        <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
        <openapi-generator-maven-plugin.version>6.6.0</openapi-generator-maven-plugin.version>
        <springdoc-openapi-webflux-ui.version>1.2.32</springdoc-openapi-webflux-ui.version>
    </properties>

    <repositories>
        <repository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </repository>
        <repository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </pluginRepository>
        <pluginRepository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
        </pluginRepository>
    </pluginRepositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-library</artifactId>
                <version>${scala-lang.library.version}</version>
            </dependency>
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf-java.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.cel</groupId>
                <artifactId>cel</artifactId>
                <version>${dev.cel.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven-clean-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
